--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,21 @@ dependencies:
   cupertino_icons: ^1.0.8
   get_it: ^8.0.3
   flutter_bloc: ^9.1.0
+  hive: ^2.2.3
+  flutter_svg: ^2.0.17
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  freezed: ^3.0.3
+  json_serializable: ^6.9.4
 
 flutter:
   uses-material-design: true
+  assets:
+    - lib/assets/images/
