--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_svg: ^2.0.17
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+  google_fonts: ^6.2.1
+  bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
@@ -26,7 +28,7 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
-  freezed: ^3.0.3
+  freezed: ^3.0.6
   json_serializable: ^6.9.4
 
 flutter:
